// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiExpressionButton props isActive false renders inactive 1`] = `
<button
  class="euiExpressionButton"
>
  <span
    class="euiExpressionButton__description"
  >
    the answer is
  </span>
   
  <span
    class="euiExpressionButton__value"
  >
    42
  </span>
</button>
`;

exports[`EuiExpressionButton props isActive true renders active 1`] = `
<button
  class="euiExpressionButton euiExpressionButton-isActive"
>
  <span
    class="euiExpressionButton__description"
  >
    the answer is
  </span>
   
  <span
    class="euiExpressionButton__value"
  >
    42
  </span>
</button>
`;

exports[`EuiExpressionButton renders 1`] = `
<button
  aria-label="aria-label"
  class="euiExpressionButton testClass1 testClass2"
  data-test-subj="test subject string"
>
  <span
    class="euiExpressionButton__description"
  >
    the answer is
  </span>
   
  <span
    class="euiExpressionButton__value"
  >
    42
  </span>
</button>
`;
